--- a/templates/apps/parts/_sidebar.html
+++ b/templates/apps/parts/_sidebar.html
@@ -69,8 +69,7 @@
             {% recursetree categories %}
                 <li class="nav-item">
                     <a class="nav-link {% if not node.is_leaf_node %}dropdown-indicator{% endif %}"
-                       href="{% if node.is_leaf_node %}{% url 'list_view' %}?category=
-                           {{ node.slug }}{% else %}#{{ node.slug }}{% endif %}"
+                       href="{% if node.is_leaf_node %}{% url 'list_view' %}?category={{ node.slug }}{% else %}#{{ node.slug }}{% endif %}"
                        role="button"
                        data-bs-toggle="collapse" aria-expanded="false"
                        aria-controls="{{ node.slug }}">
