--- a/templates/apps/auth/login.html
+++ b/templates/apps/auth/login.html
@@ -54,16 +54,26 @@
                     <div class="row g-2 mt-2">
 
                         <div class="col-sm-6">
-                            <a class="btn btn-outline-google-plus btn-sm d-block w-100" href="{% provider_login_url 'google' %}">
+                            <a class="btn btn-outline-google-plus btn-sm d-block w-100"
+                               href="{% provider_login_url 'google' %}">
                                 <span class="fab fa-google-plus-g me-2" data-fa-transform="grow-8"></span>
                                 google
                             </a>
                         </div>
 
                         <div class="col-sm-6">
-                            <a class="btn btn-outline-facebook btn-sm d-block w-100" href="#">
+                            <a class="btn btn-outline-facebook btn-sm d-block w-100"
+                               href="{% provider_login_url 'facebook' %}">
                                 <span class="fab fa-facebook-square me-2" data-fa-transform="grow-8"></span>
                                 facebook
+                            </a>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <a class="btn btn-outline-facebook btn-sm d-block w-100"
+                               href="{% provider_login_url 'telegram' %}">
+                                <span class="fab fa-telegram me-2" data-fa-transform="grow-8"></span>
+                                telegram
                             </a>
                         </div>
 
