--- a/templates/apps/shopping/order-details.html
+++ b/templates/apps/shopping/order-details.html
@@ -93,13 +93,19 @@
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <h5 class="mb-3 fs-0">Payment Method</h5>
-                    <div class="d-flex"><img class="me-3" src="{% static 'apps/assets/img/icons/visa.png' %}" width="40"
-                                             height="30"
-                                             alt=""/>
-                        <div class="flex-1">
-                            <h6 class="mb-0">{{ order.address.full_name }}</h6>
-                            <p class="mb-0 fs--1">**** **** **** {{ order.creditcard.number|get_last_chars:4 }}</p>
-                        </div>
+
+                    <div class="d-flex">
+                        {% if order.payment_method == order.PaymentMethod.CREDIT_CARD %}
+                            <img class="me-3" src="{% static 'apps/assets/img/icons/visa.png' %}" width="40"
+                                 height="30"
+                                 alt=""/>
+                            <div class="flex-1">
+                                <h6 class="mb-0">{{ order.address.full_name }}</h6>
+                                <p class="mb-0 fs--1">**** **** **** {{ order.creditcard.number|get_last_chars:4 }}</p>
+                            </div>
+                        {% else %}
+                            <img src="{% static 'apps/assets/img/icons/icon-paypal-full.png' %}" height="20" alt=""/>
+                        {% endif %}
                     </div>
                 </div>
             </div>
