--- a/templates/apps/auth/login.html
+++ b/templates/apps/auth/login.html
@@ -77,6 +77,15 @@
                             </a>
                         </div>
 
+                        <div class="col-sm-6">
+                            <a class="btn btn-outline-dark btn-sm d-block w-100"
+                               href="{% provider_login_url 'github' %}">
+                                <span class="fab fa-github me-2" data-fa-transform="grow-8"></span>
+                                github
+                            </a>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
