--- a/templates/apps/auth/register.html
+++ b/templates/apps/auth/register.html
@@ -1,6 +1,7 @@
 {% extends 'apps/main_base.html' %}
 
 {% load static %}
+{% load socialaccount %}
 
 {% block main_content %}
     <div class="row flex-center min-vh-100 py-6">
@@ -70,10 +71,36 @@
                         <div class="divider-content-center">or register with</div>
                     </div>
                     <div class="row g-2 mt-2">
-                        <div class="col-sm-6"><a class="btn btn-outline-google-plus btn-sm d-block w-100" href="#"><span
-                                class="fab fa-google-plus-g me-2" data-fa-transform="grow-8"></span> google</a></div>
-                        <div class="col-sm-6"><a class="btn btn-outline-facebook btn-sm d-block w-100" href="#"><span
-                                class="fab fa-facebook-square me-2" data-fa-transform="grow-8"></span> facebook</a>
+                        <div class="col-sm-6">
+                            <a class="btn btn-outline-google-plus btn-sm d-block w-100"
+                               href="{% provider_login_url 'google' %}">
+                                <span class="fab fa-google-plus-g me-2" data-fa-transform="grow-8"></span>
+                                google
+                            </a>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <a class="btn btn-outline-facebook btn-sm d-block w-100"
+                               href="{% provider_login_url 'facebook' %}">
+                                <span class="fab fa-facebook-square me-2" data-fa-transform="grow-8"></span>
+                                facebook
+                            </a>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <a class="btn btn-outline-facebook btn-sm d-block w-100"
+                               href="{% provider_login_url 'telegram' %}">
+                                <span class="fab fa-telegram me-2" data-fa-transform="grow-8"></span>
+                                telegram
+                            </a>
+                        </div>
+
+                        <div class="col-sm-6">
+                            <a class="btn btn-outline-dark btn-sm d-block w-100"
+                               href="{% provider_login_url 'github' %}">
+                                <span class="fab fa-github me-2" data-fa-transform="grow-8"></span>
+                                github
+                            </a>
                         </div>
                     </div>
                 </div>
