--- a/templates/apps/base.html
+++ b/templates/apps/base.html
@@ -211,13 +211,11 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link px-0 {% if user.cart_count %}notification-indicator{% endif %} notification-indicator-warning notification-indicator-fill fa-icon-wait"
-                       href="
-
-                               {% if user.is_authenticated %}{% url 'cart_page' %}{% else %}{% url 'login_page' %}{% endif %}"><span
+                       href="{% if user.is_authenticated %}{% url 'cart_page' %}{% else %}{% url 'login_page' %}{% endif %}"><span
                             class="fas fa-shopping-cart"
                             data-fa-transform="shrink-7"
                             style="font-size: 33px;"></span>
-                        <span class="notification-indicator-number">{{ user.cart_count }}</span>
+                        <span class="notification-indicator-number">{% if user.cart_count %}{{ user.cart_count }}{% endif %} </span>
                     </a>
 
                 </li>
@@ -355,6 +353,7 @@
                                                  aria-expanded="false">
                     <div class="avatar avatar-xl">
                         <img class="rounded-circle" src=" 
+                                
                                 {% if user.is_authenticated %}{% if user.image %}{{ user.image.url }}{% else %}{% static 'apps/assets/img/team/3-thumb.png' %}{% endif %}{% else %}https://cdn.create.vista.com/api/media/medium/253405368/stock-vector-vector-remove-user-icon?token={% endif %}"
                              alt=""/>
 
