--- a/templates/apps/auth/register.html
+++ b/templates/apps/auth/register.html
@@ -61,7 +61,8 @@
                                     href="#!">terms </a>and
                                 <a href="#!">privacy policy</a></label>
                         </div>
-                        <div class="mb-3">
+                        {{ form.captcha }}
+                        <div class="mb-3">  
                             <button class="btn btn-primary d-block w-100 mt-3" type="submit" name="submit">Register
                             </button>
                         </div>
